--- a/pysys-challenge-web/src/assets/css/demo.css
+++ b/pysys-challenge-web/src/assets/css/demo.css
@@ -75,6 +75,14 @@ a {
     text-decoration: none;
 }
 
+form .error {
+  color: #ff0000;
+}
+
+input:invalid {
+  border: 2px solid red;
+}
+
 .container {
     width: 100%;
     height: 100%;
